Update swagger response to include "Unauthorized" description.
