# docs/swagger.yaml
@@ -156,6 +156,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DTO.DecrementResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/DTO.ResponseDTO'
       security:
       - BasicAuth: []
       summary: Decrement a key-value pair
@@ -179,6 +183,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DTO.DeleteResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/DTO.ResponseDTO'
       security:
       - BasicAuth: []
       summary: Delete a key-value pair
@@ -202,6 +210,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DTO.GetResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/DTO.ResponseDTO'
       security:
       - BasicAuth: []
       summary: Get a key-value pair
@@ -226,6 +238,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DTO.IncrementResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/DTO.ResponseDTO'
       security:
       - BasicAuth: []
       summary: Increment a key-value pair
@@ -276,6 +292,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DTO.RetrieveFromFileResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/DTO.ResponseDTO'
       security:
       - BasicAuth: []
       summary: Retrieve from file
@@ -299,6 +319,10 @@ paths:
           description: OK
           schema:
             $ref: '#/definitions/DTO.SaveToFileResponseDTO'
+        "401":
+          description: Unauthorized
+          schema:
+            $ref: '#/definitions/DTO.ResponseDTO'
       security:
       - BasicAuth: []
       summary: Save to file
